--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,17 @@
 # requirements.txt
-fastapi
-uvicorn[standard]
-motor
-ccxt
+dash==2.13.1
+gunicorn==20.1.0
+pandas
 numpy
+plotly
+motor
+fastapi
+uvicorn
 python-dotenv
-pydantic
 scikit-learn
 tenacity
 prometheus_client
 sentry-sdk
 requests
-pytest
-coverage
-bandit
-dash
-pandas
-plotly
-dash[async]
-gunicorn==20.1.0
-python-bitget
+ccxt
+pybitget
