--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn src.api.bot_dashboard:server --bind 0.0.0.0:$PORT
+    startCommand: gunicorn src.api.bot_dashboard:server --bind 0.0.0.0:$PORT --workers 4 --timeout 120 --worker-class gthread --threads 3
     autoDeploy: true
     envVars:
       - key: MONGO_URI
