--- a/render.yaml
+++ b/render.yaml
@@ -5,9 +5,11 @@ services:
     name: trading-bot-dashboard
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: 
+      - pip install -r requirements.txt
     startCommand: gunicorn src.api.bot_dashboard:server --bind 0.0.0.0:$PORT --workers 4 --timeout 120 --worker-class gthread --threads 3
-    autoDeploy: true
     envVars:
       - key: MONGO_URI
         fromDatabase: mongo-uri-secret
+      - key: BASE_API_URL
+        value: https://bot-service.onrender.com
