--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
 # requirements.txt
-
 dash==2.12.1
-gunicorn==20.1.0
-pandas
-numpy
-plotly
-motor
-fastapi
-uvicorn
-python-dotenv
-scikit-learn
-tenacity
-prometheus_client
-sentry-sdk
-requests
-ccxt
-dash-extensions
+dash-extensions==0.1.23
+pandas==2.0.3
+numpy==1.24.4
+plotly==5.18.0
+motor==3.3.2
+fastapi==0.104.1
+uvicorn==0.24.0.post1
+python-dotenv==1.0.0
+scikit-learn==1.3.2
+tenacity==8.2.3
+ccxt==4.2.48
+requests==2.31.0
+gunicorn==21.2.0
+python-dateutil==2.8.2
+pytz==2023.3
