--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-# requirements.txt
 dash==2.12.1
 pandas==2.0.3
-numpy==1.24.4
+numpy==1.26.0  # Python 3.12 সামঞ্জস্যপূর্ণ ভার্সনে আপডেট
 plotly==5.18.0
 motor==3.3.2
 fastapi==0.104.1
