--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-dash==2.12.1
-pandas==2.0.3
-numpy==1.24.4
-plotly==5.18.0
-motor==3.3.2
-fastapi==0.104.1
-uvicorn==0.24.0.post1
-python-dotenv==1.0.0
-scikit-learn==1.3.2
-tenacity==8.2.3
-ccxt==4.2.48
-requests==2.31.0
-gunicorn==21.2.0
-python-dateutil==2.8.2
-pytz==2023.3
-dash-extensions==2.0.0   # <-- update this
-setuptools==70.0.0
-wheel==0.43.0
-cryptography==42.0.8
+dash
+pandas
+numpy
+plotly
+motor
+fastapi
+uvicorn
+python-dotenv
+scikit-learn
+tenacity
+ccxt
+requests
+gunicorn
+python-dateutil
+pytz
+dash-extensions
+setuptools
+wheel
+cryptography
